[gd_scene load_steps=23 format=3 uid="uid://hvph0dl1e1xm"]

[ext_resource type="Script" path="res://Scripts/Knight.gd" id="1_67146"]
[ext_resource type="Script" path="res://Scripts/Head.gd" id="2_dygys"]
[ext_resource type="PackedScene" uid="uid://5lr51skl5dc3" path="res://Scenes/Sword.tscn" id="3_4bnqq"]
[ext_resource type="Script" path="res://Scripts/Weapon.gd" id="3_b8rcd"]
[ext_resource type="Shader" path="res://Shaders/Posterization.gdshader" id="5_pskeb"]
[ext_resource type="PackedScene" uid="uid://nxryl0utf7u3" path="res://Scenes/Torch.tscn" id="5_v0jv2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1rq3n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fou5d"]
size = Vector3(1, 1.91211, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yooim"]
render_priority = 0
shader = ExtResource("5_pskeb")
shader_parameter/level1 = Color(0.266667, 0.00392157, 0.00392157, 1)
shader_parameter/level2 = Color(0.435294, 0.0235294, 0.141176, 1)
shader_parameter/level3 = Color(1, 0.823529, 0.772549, 1)
shader_parameter/level4 = Color(1, 1, 1, 1)
shader_parameter/threshold1 = 0.1
shader_parameter/threshold2 = 0.4
shader_parameter/threshold3 = 0.6

[sub_resource type="PlaneMesh" id="PlaneMesh_d3qg0"]
lightmap_size_hint = Vector2i(12, 12)
material = SubResource("ShaderMaterial_yooim")

[sub_resource type="Animation" id="Animation_udvhx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.341, -0.07, -0.665)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.52891, 1.55683, -3.14159)]
}

[sub_resource type="Animation" id="Animation_m70c0"]
resource_name = "Rebuke"

[sub_resource type="Animation" id="Animation_dh86v"]
resource_name = "Swing"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.6, 0.7, 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1.52891, 1.55603, -3.14159), Vector3(1.31665, 2.97428, -1.71806), Vector3(1.00432, 3.06349, -1.62196), Vector3(0.838569, 3.07892, -1.60265), Vector3(0.838569, 3.07892, -1.60265), Vector3(1.01191, 3.06255, -1.62308), Vector3(1.19816, 3.02633, -1.66343), Vector3(1.48317, 2.64274, -2.05326), Vector3(1.29678, 0.181514, -1.46608), Vector3(0.858702, 0.0645772, -1.46608), Vector3(0.397935, 0.0453786, -1.60396), Vector3(0.240855, 0.0436332, -1.59523), Vector3(0.00523599, 0.0418879, -1.5865)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.59, 0.7, 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.340849, -0.0698361, -0.664948), Vector3(0.341, 0.1, -0.665), Vector3(0.341, 0.0999999, -0.48524), Vector3(0.341, 0.0999999, -0.327956), Vector3(0.367699, 0.102892, -0.166271), Vector3(0.367699, 0.183821, -0.258689), Vector3(0.367699, 0.265866, -0.30742), Vector3(0.367699, 0.344409, -0.463292), Vector3(0.367699, 0.344409, -0.54608), Vector3(0.367699, 0.281993, -0.739177), Vector3(0.367699, 0.0170345, -0.816764), Vector3(0.367699, -0.0509057, -0.953836), Vector3(0.367699, -0.124587, -1.05089)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u350n"]
_data = {
"RESET": SubResource("Animation_udvhx"),
"Rebuke": SubResource("Animation_m70c0"),
"Swing": SubResource("Animation_dh86v")
}

[sub_resource type="Curve" id="Curve_tir6n"]
_data = [Vector2(0, 0.0879121), 0.0, 0.0, 0, 0, Vector2(0.253623, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.032967), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_tujtj"]
width = 2048
curve = SubResource("Curve_tir6n")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ye5c7"]
emission_shape = 1
emission_sphere_radius = 0.05
angle_min = 360.0
angle_max = 720.0
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 5.0
initial_velocity_max = 7.0
angular_velocity_min = -720.0
angular_velocity_max = 317.59
radial_velocity_min = 2.0
radial_velocity_max = 3.0
gravity = Vector3(0, 0, 0)
scale_max = 892.57
scale_curve = SubResource("CurveTexture_tujtj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fyhle"]
transparency = 2
alpha_scissor_threshold = 0.14
alpha_antialiasing_mode = 0
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.964706, 1, 1)
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_43y2r"]
material = SubResource("StandardMaterial3D_fyhle")
size = Vector2(0.02, 0.02)

[sub_resource type="Animation" id="Animation_jww2f"]
resource_name = "Exorcise"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.0101754, -0.0988798, 0.714819), Vector3(0.0429675, -0.00511754, 0.622884), Vector3(0.0885549, 0.117273, 0.492897), Vector3(0.248195, 0.117273, 0.302491)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.0897797, 0), Vector3(0, -0.0897797, 0), Vector3(0, -0.0897797, 0), Vector3(0, -0.0897797, 0)]
}

[sub_resource type="Animation" id="Animation_kqsuj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0429675, -0.00511754, 0.622884)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.0897797, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2dq3"]
_data = {
"Exorcise": SubResource("Animation_jww2f"),
"RESET": SubResource("Animation_kqsuj")
}

[node name="Knight" type="Node3D"]

[node name="Knight" type="CharacterBody3D" parent="."]
script = ExtResource("1_67146")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Knight"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.919884, 0)
mesh = SubResource("CapsuleMesh_1rq3n")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Knight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04023, -0.00033015)
shape = SubResource("BoxShape3D_fou5d")

[node name="Head" type="Node3D" parent="Knight"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.27936, 0)
script = ExtResource("2_dygys")

[node name="SpringArm3D" type="SpringArm3D" parent="Knight/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.345087, 0)
spring_length = -0.5

[node name="Camera3D" type="Camera3D" parent="Knight/Head/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0456798, 0.549174, -0.821973)
current = true
fov = 53.5
far = 54.17

[node name="Shader2" type="MeshInstance3D" parent="Knight/Head/SpringArm3D/Camera3D"]
transform = Transform3D(0.996173, 0.0577648, -0.065589, 0.068953, -0.0583064, 0.995915, 0.0537046, -0.996626, -0.0620658, -0.0016253, -0.238178, 0.0527619)
mesh = SubResource("PlaneMesh_d3qg0")
skeleton = NodePath("../Shader")

[node name="Shader" type="MeshInstance3D" parent="Knight/Head/SpringArm3D/Camera3D"]
transform = Transform3D(-0.998297, -0.0578755, 0.00727239, 0, 0.124675, 0.992198, -0.0583307, 0.990508, -0.124463, -0.00371312, -0.00191736, -0.237877)
mesh = SubResource("PlaneMesh_d3qg0")

[node name="Weapon" type="Node3D" parent="Knight/Head/SpringArm3D/Camera3D"]
script = ExtResource("3_b8rcd")

[node name="Sword" parent="Knight/Head/SpringArm3D/Camera3D/Weapon" instance=ExtResource("3_4bnqq")]
transform = Transform3D(-0.0139683, -0.999024, 0.0418699, -1.06158e-07, -0.041874, -0.999122, 0.999902, -0.0139561, 0.000584805, 0.341, -0.07, -0.665)

[node name="SwordAnim" type="AnimationPlayer" parent="Knight/Head/SpringArm3D/Camera3D/Weapon/Sword"]
reset_on_save = false
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_u350n")
}
speed_scale = 4.0

[node name="Torch" type="OmniLight3D" parent="Knight/Head/SpringArm3D/Camera3D/Weapon"]
transform = Transform3D(0.995973, 0, -0.0896592, 0, 1, 0, 0.0896592, 0, 0.995973, 0.0429675, -0.00511754, 0.622884)
light_energy = 16.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
distance_fade_enabled = true

[node name="Torch_Light" type="OmniLight3D" parent="Knight/Head/SpringArm3D/Camera3D/Weapon/Torch"]
transform = Transform3D(0.995972, 0, -0.0896592, 0, 1, 0, 0.0896592, 0, 0.995972, -0.20511, -0.188461, -2.10419)
light_energy = 16.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
distance_fade_enabled = true

[node name="GPUParticles3D" type="GPUParticles3D" parent="Knight/Head/SpringArm3D/Camera3D/Weapon/Torch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.502788, 0.0476189, -1.20892)
amount = 200
lifetime = 0.05
randomness = 1.0
interpolate = false
local_coords = true
draw_order = 3
process_material = SubResource("ParticleProcessMaterial_ye5c7")
draw_pass_1 = SubResource("QuadMesh_43y2r")

[node name="TorchAnim" type="AnimationPlayer" parent="Knight/Head/SpringArm3D/Camera3D/Weapon/Torch"]
libraries = {
"": SubResource("AnimationLibrary_g2dq3")
}

[node name="Torch" parent="Knight/Head/SpringArm3D/Camera3D/Weapon/Torch" instance=ExtResource("5_v0jv2")]
transform = Transform3D(0.995973, 0, 0.0896592, 0, 1, 0, -0.0896592, 0, 0.995973, -0.523816, -0.354297, -1.20212)

[connection signal="animation_finished" from="Knight/Head/SpringArm3D/Camera3D/Weapon/Sword/SwordAnim" to="Knight/Head/SpringArm3D/Camera3D/Weapon" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Knight/Head/SpringArm3D/Camera3D/Weapon/Torch/TorchAnim" to="Knight/Head/SpringArm3D/Camera3D/Weapon" method="_on_animation_player_animation_finished"]
